Archive2/28/1da9802b3c4aa7/output
main.cpp:17:53: error: expected member name or ';' after declaration specifiers
    test_grammar() : test_grammar::base_type{start} {
                                                    ^
main.cpp:17:45: error: expected '('
    test_grammar() : test_grammar::base_type{start} {
                                            ^
main.cpp:17:46: error: use of undeclared identifier 'start'
    test_grammar() : test_grammar::base_type{start} {
                                             ^
main.cpp:26:1: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
auto main() -> int {
^
main.cpp:26:13: error: expected function body after function declarator
auto main() -> int {
            ^
1 warning and 4 errors generated.
